--- a/My Job/Writing/arbeit.tex
+++ b/My Job/Writing/arbeit.tex
@@ -10,11 +10,11 @@
 
 %% Titelblatt
 \includepdf[pages=1]{extras/titelseite}
-\cleardoublepage
+%\cleardoublepage
 
 %% Eidesstattliche Erklärung
 \input{extras/eidesstattliche}
-\cleardoublepage
+%\cleardoublepage
 
 %% Abstract
 \begin{abstract}
