--- a/My Job/Writing/extras/titelseite.tex
+++ b/My Job/Writing/extras/titelseite.tex
@@ -37,15 +37,15 @@
   \Large Bachelorarbeit im Studiengang\\[2mm]
   \textbf{Geodäsie und Geoinformatik}\\[2mm]
   an der Universität Stuttgart\\[10mm]
-  Ziqing. Yu\\[10mm]
+  Ziqing Yu\\[10mm]
   Stuttgart, November 2020\\[5mm]
   \rule{\textwidth}{0.5pt}\\[5mm]
   \begin{minipage}{\textwidth}%
   \hfill
   \begin{minipage}[t]{0.1\textwidth}%
-  \large\textbf{Betreuer:}%
+  \large\textbf{Supervisor:}%
   \end{minipage}
-  \quad
+  \quad\quad
   \begin{minipage}[t][3.0cm]{0.6\textwidth}%
     \large Dr.-Ing. Mohammad Tourian \\
     Universität Stuttgart\\[3mm]
