--- a/My Job/Writing/kapitel/kapitel6.tex
+++ b/My Job/Writing/kapitel/kapitel6.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusion and outlook}
 \section{Conclusion}
-In this work the behavior of total water storage along with other water cycle component in Ob river basin since 2003 are discussed. The equivalent water height is through GRACE and GRACE-FO mission determined, precipitation and evapotranspiration are obtained from various data models and Runoff is measured using satellite altimetry indirectly. For each of these component, one final time series is generated using mathematical and statistic methods. The whole time series divide into 3 periods and the change of each component in these periods are analyzed. \\\\
-The GRACE data showed that before 2013, the total water storage in Ob river basin has slightly decreased, from 2013 to 2015 there is a positive trend of the total water storage and this is due to the growth of the precipitation amount. After 2015, the precipitation in this area has a decline comparing to the value between 2013 and 2015. Though evapotranspiration are also weaker in this period it was not as strong as precipitation and meanwhile runoff may have increased. As a result, total water storage has reduced since 2016. 
+In this work the behavior of total water storage along with other water cycle component in Ob river basin since 2003 are discussed. The equivalent water height is through GRACE and GRACE-FO mission determined, precipitation and evapotranspiration are obtained from various data models and runoff is measured using satellite altimetry. For each of these component, one final time series is generated using mathematical and statistic methods. The whole time series divide into 3 periods and the change of each component in these periods are analyzed. \\\\
+The GRACE data showed that before 2013, the total water storage in Ob river basin has slightly decreased by $0.68 \pm 0.25 \ut{mm/month}$, from 2013 to 2015 there is a positive trend of the total water storage ($3.31 \pm 0.86 \ut{mm/month}$) and this is due to the growth of the precipitation amount ($39.12 \pm 0.35\ \text{to} \ 44.32\pm 0.64 \ut{mm/month}$). After 2015, the precipitation in this area has a decline comparing to the value between 2013 and 2015 ($41.28 \pm 0.55 \ut{mm/month}$). Though evapotranspiration are also weaker in this period the reduction was not as strong as precipitation and meanwhile runoff may have increased. As a result, total water storage has reduced by $0.80 \pm 0.57 \ut{mm/month}$ since 2016. 
 \section{Outlook}
-There is still some questions that can be answered. For example, from 2003 to 2012 the trend of total water storage is negative, but the exact time interval of this tendency is not mathematically detected. Besides, this work focus on water changes of the whole basin, these changes can be caused by one or more specific subarea of it. By further spatial analyzing those subareas, which have the major influence on the whole basin, should be detected. \\\\
+There is still some questions that can be answered. By further spatial analyzing those subareas, which have the major influence on the whole basin, should be detected. Furthermore, water storage exists in different forms like groundwater recharge and permafrost, the hydrological implications of continued permafrost degradation is complicated in high-latitude regions  \cite{young2020conceptual}. Further research is needed in order to understand the water behavior. 
