--- a/My Job/Writing/literatur/bib.bib
+++ b/My Job/Writing/literatur/bib.bib
@@ -42,6 +42,12 @@
 	publisher={Encyclopaedia Britannica}
 }
 
+@article{graceoverview,
+	title = {Overview - Monthly Mass Grids}
+	publisher = {NASA}
+	url = {https://grace.jpl.nasa.gov/data/monthly-mass-grids/}
+}
+
 @article{allen1998crop,
 	title={Crop evapotranspiration-Guidelines for computing crop water requirements-FAO Irrigation and drainage paper 56},
 	author={Allen, Richard G and Pereira, Luis S and Raes, Dirk and Smith, Martin and others},
@@ -207,4 +213,71 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 	doi = {10.1175/JHM-D-13-0157.1},
 	url = {https://doi.org/10.1175/JHM-D-13-0157.1},
 	eprint = {https://journals.ametsoc.org/jhm/article-pdf/15/6/2111/4128046/jhm-d-13-0157\_1.pdf},
+}
+
+@article{young2020conceptual,
+	title={A conceptual model for anticipating the impact of landscape evolution on groundwater recharge in degrading permafrost environments},
+	author={Young, Nathan Lee and Lemieux, J-M and Delottier, Hugo and Fortier, Richard and Fortier, Philippe},
+	journal={Geophysical Research Letters},
+	pages={e2020GL087695},
+	year={2020},
+	publisher={Wiley Online Library}
+}
+
+@book{oguntunde2004evapotranspiration,
+	title={Evapotranspiration and complimentarity relations in the water balance of the Volta Basin: Field measurements and GIS-based regional estimates},
+	author={Oguntunde, Philip Gbenro},
+	year={2004},
+	publisher={Cuvillier}
+}
+
+@article{tapley2004grace,
+	title={GRACE measurements of mass variability in the Earth system},
+	author={Tapley, Byron D and Bettadpur, Srinivas and Ries, John C and Thompson, Paul F and Watkins, Michael M},
+	journal={Science},
+	volume={305},
+	number={5683},
+	pages={503--505},
+	year={2004},
+	publisher={American Association for the Advancement of Science}
+}
+
+@article{frey2009impacts,
+	title={Impacts of permafrost degradation on arctic river biogeochemistry},
+	author={Frey, Karen E and McClelland, James W},
+	journal={Hydrological Processes: An International Journal},
+	volume={23},
+	number={1},
+	pages={169--182},
+	year={2009},
+	publisher={Wiley Online Library}
+}
+
+@article{permafrost,
+	title={What is permafrost},
+	author={Doyle, heather},
+	year={2020},
+	publisher={NASA Climate Kids}
+}
+
+@article{kidd2001satellite,
+	title={Satellite rainfall climatology: A review},
+	author={Kidd, Chris},
+	journal={International Journal of Climatology: A Journal of the Royal Meteorological Society},
+	volume={21},
+	number={9},
+	pages={1041--1066},
+	year={2001},
+	publisher={Wiley Online Library}
+}
+
+@article{sun2018review,
+	title={A review of global precipitation data sets: Data sources, estimation, and intercomparisons},
+	author={Sun, Qiaohong and Miao, Chiyuan and Duan, Qingyun and Ashouri, Hamed and Sorooshian, Soroosh and Hsu, Kuo-Lin},
+	journal={Reviews of Geophysics},
+	volume={56},
+	number={1},
+	pages={79--107},
+	year={2018},
+	publisher={Wiley Online Library}
 }
