--- a/My Job/Writing/kapitel/kapitel3.tex
+++ b/My Job/Writing/kapitel/kapitel3.tex
@@ -3,133 +3,10 @@
 \section{GRACE and GRACE-FO}
 \subsection{Spherical harmonics}
 The variations in the gravity field impacts on both GRACE satellites at different times, such deviations cause a change in the inter-satellite range, which is measured with very high accuracy from the K-band measurement unit. The measured inter-satellite range can be transformed into changes in teh Earth's gravity field, which is described with the Stokes coefficients $\tilde{C}_{lm}$ and $\tilde{S}_{lm}$.\\\\
-There is only one Earth gravity field and all centers start off with identical GRACE Level-1 observations, but deriving month-to-month gravity field variations from GRACE observations requires a complex inversion of relative ranging observations between the two formation-flying GRACE spacecraft, in combination with precise orbit determination via GPS and various corrections for spacecraft accelerations not related to gravity changes. Many parameter choices and solution strategies are possible, and have been explored by different data centers. In this thesis the solutions from JPL, CSR, GFZ and ITSG are used, which allows the calculation of gravity filed and equivalent water height anomaly. \\\\
-The shape of the geoid, i.e. the distance between the reference ellipsoid and the geoid surface $N$, can be expanded in a sum of spherical harmonics.
+There is only one Earth gravity field and all centers start off with identical GRACE Level-1 observations, but deriving month-to-month gravity field variations from GRACE observations requires a complex inversion of relative ranging observations between the two formation-flying GRACE spacecraft, in combination with precise orbit determination via GPS and various corrections for spacecraft accelerations not related to gravity changes. Many parameter choices and solution strategies are possible, and have been explored by different data centers. In this thesis the solutions from JPL, CSR, GFZ and ITSG are used, which allows the calculation of gravity filed and equivalent water height anomaly. \autoref{shmethod} shows the method of estimating TWS from GRACE spherical harmonics: 
 \begin{equation}
-	N(\theta, \lambda) = R \sum_{l=0}^{\infty} \sum_{m=0}^{l} \tilde{P}_{lm}(\cos \theta)(\tilde{C}_{lm} \cos m\lambda + \tilde{S}_{lm}\sin m\lambda)
+h_{W}(\theta,\lambda;t) = \frac{R \rho_{ave}}{3\rho_{W}} \sum_{l=0}^{\infty} \frac{2l+1}{1+k_{l}} \sum_{m=0}^{l} \tilde{P}_{lm} (\cos \theta) (\Delta \tilde{C} \cos m \lambda + \Delta \tilde{S} \sin m \lambda)
 \end{equation}
-where
-\begin{table}[htbp]
-\begin{tabular}{ll}	
-$N(\theta, \lambda)$	&  geoid height at a point with the spherical coordinates $\theta$,$\lambda$\\ 
-$R$	&  radius of the Earth\\ 
-$\tilde{P}_{lm}$	&  normalized associated Legendre functions of degree $l$ and order $m$\\ 
-$\tilde{C}_{lm}$,$\tilde{S}_{lm}$	&  normalized Stokes coefficients\\ 
-\end{tabular}
-\end{table}
-The time-dependent change in the geoid heights $\Delta N$ is reflected by the difference between the spherical harmonic coefficients $\tilde{C}_{lm}$,$\tilde{S}_{lm}$. In this case, the equation can be written as:
-\begin{equation}
-\Delta N(\theta, \lambda) = R \sum_{l=0}^{\infty} \sum_{m=0}^{l} \tilde{P}_{lm}(\cos \theta)(\Delta \tilde{C}_{lm} \cos m\lambda + \Delta \tilde{S}_{lm}\sin m\lambda)
-\end{equation}
-By assuming that $\Delta N(\theta, \lambda;t) \neq 0$, it is clear that there had to be a change in the Earth's gravity field caused by mass fluctuations in, on and above the Earth's surface. This change is denoted as a change in the Earth's density distribution. In\cite{wahr1998time}, it was found that there is a connection between this quantity and its representation in spherical harmonic coefficients.
-\begin{equation}
-	\begin{Bmatrix}
-	\Delta \tilde{C}_{lm}(t)\\
-	\Delta \tilde{S}_{lm}(t)
-	\end{Bmatrix} = \frac{3}{4\pi R \rho_{ave}(2l+1)} \int \int \Delta \rho(r,\theta,\lambda;t) \tilde{P}_{lm}(\cos \theta) \times (\frac{r}{R})^{l+2} \begin{Bmatrix}
-	\cos m\lambda \\
-	\sin m\lambda
-	\end{Bmatrix} \sin\theta d\theta d\lambda
-\end{equation}
-where $r$ is the distance of the computation point from the center of the Earth and $\rho_{ave}$ is the average density of the Earth. However, an accurate determination of $\Delta \rho(r,\theta,\lambda;t)$ is nearly impossible, because it requires prior knowledge about the inner density distribution of the Earth. But all short periodic mass variations can be assumed to happen only in a thin layer on the Earth's surface, which can be detected by GRACE satellites. The thickness is mostly determined by the thickness of the atmosphere and is of the order of 10 to 15 \ut{km} \cite{wahr1998time}. \\\\
-The change in this thick layer is called surface density $\Delta \rho_{S}$, which can be defined as the radial integral of $\Delta \rho$ through this layer and since the layer is thick enough, it can be assumed that $r \approx R$, so the equation can be simplified as
-\begin{equation}
-	\begin{Bmatrix}
-	\Delta \tilde{C}_{lm}(t)\\
-	\Delta \tilde{S}_{lm}(t)
-	\end{Bmatrix}_{\text{surf mass}} = \frac{3}{4\pi R \rho_{ave}(2l+1)} \int \int \Delta \rho(\theta,\lambda;t) \tilde{P}_{lm}(\cos \theta)  
-	\begin{Bmatrix}
-	\cos m\lambda \\
-	\sin m\lambda
-	\end{Bmatrix} \sin\theta d\theta d\lambda
-\end{equation}
-This equation now connects the density redistribution in this thin layer with the spherical harmonic coefficients. Thus, it describes the contribution to the geoid from the direct gravitational attraction of the surface mass \cite{wahr1998time}. The mass fluctuations on the surface also deform the underlying Earth, which implicates a change in the gravitational potential, and thus a change in the geoid shape, as well. This effect is considered by the so called $Love\ number\ k_{l}$, which were derived from\cite{han1995viscoelastic}. The contribution from the deformed solid earth may then be written as
-\begin{equation}
-\begin{Bmatrix}
-\Delta \tilde{C}_{lm}(t)\\
-\Delta \tilde{S}_{lm}(t)
-\end{Bmatrix}_{\text{solid Earth}} = \frac{3k_{l}}{4\pi R \rho_{ave}(2l+1)} \int \int \Delta \rho(\theta,\lambda;t) \tilde{P}_{lm}(\cos \theta) 
-\begin{Bmatrix}
-\cos m\lambda \\
-\sin m\lambda
-\end{Bmatrix} \sin\theta d\theta d\lambda
-\end{equation}
-The total geoid change is obtained by adding (3.4) and (3.5)
-\begin{equation}
-	\begin{Bmatrix}
-	\Delta \tilde{C}_{lm}(t)\\
-	\Delta \tilde{S}_{lm}(t)
-	\end{Bmatrix} = \begin{Bmatrix}
-	\Delta \tilde{C}_{lm}(t)\\
-	\Delta \tilde{S}_{lm}(t)
-	\end{Bmatrix}_{\text{surf Earth}} + \begin{Bmatrix}
-	\Delta \tilde{C}_{lm}(t)\\
-	\Delta \tilde{S}_{lm}(t)
-	\end{Bmatrix}_{\text{solid Earth}}
-\end{equation}
-Inserting (3.6) into (3.2) leads to the so called \textit{isotropic transfer coefficients}, which define the quantity of a spherical harmonic series expansion. In the case of a surface mass density, they are defined as 
-\begin{equation}
-	\Lambda_{l} = \frac{R\rho_{ave}}{3} \frac{2l+1}{1+k_{l}}
-\end{equation} 
-Then an expression for the surface mass density in terms of the spherical harmonic coefficients can be written as
-\begin{equation}
-	\Delta \rho_{S}(\theta,\lambda) = \frac{R \rho_{ave}}{3} \sum_{l=0}^{\infty} \frac{2l+1}{1+k_{l}} \sum_{m=0}^{l} \tilde{P}_{lm} (\cos \theta) (\Delta \tilde{C} \cos m \lambda + \Delta \tilde{S} \sin m \lambda)
-\end{equation}
-The gravity field change can be assumed as the change of the thin layer of water on the Earth's surface. The relation between the water equivalent heights and the surface mass density is
-\begin{equation}
-	h_{W}(\theta,\lambda) = \frac{\Delta \rho_{S}(\theta,\lambda)}{\rho_{W}}
-\end{equation}
-where $\rho_{W}$ is the average density of water and thus
-\begin{equation}
-	h_{W}(\theta,\lambda;t) = \frac{R \rho_{ave}}{3\rho_{W}} \sum_{l=0}^{\infty} \frac{2l+1}{1+k_{l}} \sum_{m=0}^{l} \tilde{P}_{lm} (\cos \theta) (\Delta \tilde{C} \cos m \lambda + \Delta \tilde{S} \sin m \lambda)
-\end{equation}
-For simplicity, this formula can be written as 
-\begin{equation}
-	h_{W}(\theta,\lambda;t) = \sum_{l=0}^{\infty} \Lambda_{l} \sum_{m=0}^{l} \tilde{Y}_{lm}(\theta,\lambda) \Delta \tilde{K}_{lm}(t)
-\end{equation}
-where 
-\begin{itemize}
-	\item $\Lambda_{l} = \frac{R \rho_{ave}}{3 \rho w} \frac{2l+1}{1+k_{l}}$: isotropic spectral transfer coefficients
-	\item $\tilde{Y}_{lm}(\theta,\lambda) = \tilde{P}_{lm}(\cos \theta)(\cos m\lambda \quad \sin m \lambda)^{T}$: normalized surface spherical harmonics
-	\item $ \Delta \tilde{K}_{lm}(t) = (\Delta \tilde{C}_{lm} \quad \Delta \tilde{S}_{lm})^{T}$: normalized Stokes coefficients
-\end{itemize}
-The associated Legendre functions are given by
-\begin{equation}
-	\tilde{P}_{n,m}(t) = \sqrt{(2-\delta_{m0})(2n+1)\frac{(n-m)!}{(n+m)!}}\sqrt{1-t^2}^{m}\frac{d^{n+m}}{dt^{n+m}}\frac{1}{2^n n!}(t^2 - 1)^n
-\end{equation}
-where $n$ is degree, $m$ is order and $t= \cos \theta$ is a substitution. The Legendre functions can be calculated by the recursion.
-\begin{gather}
-	\tilde{P}_{0,0}(t) = 1 \\
-	\tilde{P}_{m,m}(t) = W_{m,m}\sin \theta \tilde{P}_{m-1,n-1}(t-1) \quad  \text{for $m > 0$ and $m =n$} \\
-	\tilde{P}_{n,m} = W_{n,m}[\cos \theta \tilde{P}_{n-1,m}(t) - \frac{1}{W_{n-1,m}} \tilde{P}_{n-2,m}(t)] \quad \text{for $m \neq n$}
-\end{gather}       
-with the factors
-\begin{equation}
-	W_{n,m} = \begin{cases}
-	\sqrt{3} & \text{for $n = 1$ and $m = {0,1}$}\\
-	\sqrt{\frac{2n+1}{2n}} & \text{if $n=m$ and $n>1$} \\
-	\sqrt{\frac{(2n+1)(2n-1)}{(n+m)(n-m)}} & \text{$n>1$ and $m \neq n$}
-	\end{cases}
-\end{equation}                   
-and the convention $\tilde{P}_{n,m}(t) = 0$ for  $m>n$. This algorithm is shown to be stable until degree $n \approx 1800$. In this thesis they are up to 96. \\\\
-It is obvious that only $\Delta \tilde{K}_{lm}$ is time dependent while $\Lambda_{l}$ and $\tilde{Y}_{lm}(\theta,\lambda)$ are constant in time, by using the methods of forwards and backward-differences a rate of mass variations in terms of water equivalent heights can be obtained.
-\begin{equation}
-	\dot{h}_{W}(\theta,\lambda;t) = \sum_{l=0}^{\infty} \Lambda_{l} \sum_{m=0}^{l} \tilde{Y}_{lm}(\theta,\lambda) \Delta \dot{\tilde{K}}_{lm}(t)
-\end{equation}
-This computation of the area weighted rate of change of water equivalent heights ofr one particular region $\chi$, defined by a set of $k$ grid cell centers $(\theta_{i}, \lambda_{i}),j=1,2,3\cdots,k$, can be done according to
-\begin{equation}
-	\dot{h}_{W}(\chi;t) = \sum_{j=1}^{k}\ \frac{a(\theta_{i},\lambda_{i})}{a(\chi)} sum_{l=0}^{\infty} \Lambda_{l} \sum_{m=0}^{l} \tilde{Y}_{lm}(\theta_{i},\lambda_{i}) \Delta \dot{\tilde{K}}_{lm}(t)
-\end{equation}
-\begin{table}[htbp]
-	\begin{tabular}{ll}
-	$\dot{h}_{W}(\chi;t)$	&  rate of mass change in catchment $\chi$\\ 
-	$k$	&  number of date points in the catchment\\ 
-	$a(\theta_{i},\lambda_{i})$	&  area of the grid cell $j$\\ 
-	$a(\chi)$	&  total area of the catchment $\chi$\\ 
-	\end{tabular}
-\end{table}
-In this thesis, the size of the cell is $0.5^{\circ} \times 0.5^{\circ}$, which means there are $360 \times 720$ cells.
-With the help of the \textit{shbundle}, \textit{EWHbundle} and the basin mask from the Institute of Geodesy (GIS), University of Stuttgart, this process can easily be done and the equivalent water heights of Ob area between 2002 and 2020 are acquirable. 
 \subsection{Mass concentration}
 Spherical harmonics have been well studied and widely used in satellite geodesy for several decades, based on the computational efficiency of the parameterization, and because the satellite sensitivity is dependent on the spatial wavelength of the mass variations which is implicit in the harmonic basis function. However, unconstrained harmonic solutions from GRACE have typically suffered from poor observability of east-west gradients, resulting in the so-called "stripes" that are conventionally removed via empirical smooting and-or "destriping" algorithms. Although quite effective, especially for larger spatial scales,the destriping also removes some real geophysical signal along with the stripes,and the size shape, and orientation of the signals strongly affect the effectiveness of destriping.\cite{watkins2015improved} \\\\
 Thus, to confirm the reliability of spherical harmonic, another common function would be be taken into consideration to estimate mass flux from GRACE, which is called mass concentration(mascon). Each mass tile are defined as a finite truncated spherical harmonic representation up to degree and order 120, which are in turn related to the range-rate observation via their partial derivatives. The size of each tile is aproximately $1^{\circ}$ equatorial longitudinal distance. The mass anomaly for each of the mass tile is estimated using the KBR range-rate observations and the associated spherical harmonic partial derivatives and the singular estimation process is stabilized using Tikhonov regularization solutions with time-variable regularization matrix. \cite{save2016high}. \\\\
@@ -144,20 +21,21 @@ This mascon solutions have no stripe errors and capture all the signals ovserved
 In this thesis the mascon solution from CSR are compared with the results from spherical harmonic solutions.
 \newpage
 \section{Precipitation}
-In this thesis the precipitation data from 9 data resources are gathered and processed (\autoref{tab:pre}). The methods dealing with these data sets will be discussed later in this chapter:
+Gauge observations are typically used to measure precipitation directly at the Earth's surface \cite{kidd2001satellite}. Various large-scale climate data sets at different spatiotemporal scales have been developed from station (in situ) observations. These different types of precipitation data product have proved useful across a wide range of fields of research \cite{sun2018review}.
+In this thesis the precipitation data from 9 data resources are gathered and processed (\autoref{tab:pre}). The methods dealing with these data sets will be discussed later:
 \begin{table}[htbp]\centering 
 	\begin{tabular}{|l|l|l|l|l|}
 		\hline
-		Dataset      & Timespan       & Temporal Resolution & Spatial Resolution & Spatial Coverage \\ \hline
+		\textbf{Dataset}      & \textbf{Timespan}       & \textbf{Temporal Resolution} & \textbf{Spatial Resolution} & \textbf{Spatial Coverage} \\ \hline
 		PREC/L       & 1948 - present & Monthly             & $0.5^{\circ} \times 0.5^{\circ}$          & Global           \\ \hline
-		CPC          & 1979 - present & Monthly \& Daily    & $0.5^{\circ} \times 0.5^{\circ}$          & Global           \\ \hline
+		CPC          & 1979 - present & Monthly , Daily    & $0.5^{\circ} \times 0.5^{\circ}$          & Global           \\ \hline
 		GPCP         & 1979 - present & Monthly             & $2.5^{\circ} \times 2.5^{\circ}$          & Global           \\ \hline
 		CMAP         & 1979 - present & Monthly             & $2.5^{\circ} \times 2.5^{\circ}$          & Global           \\ \hline
-		PERSIANN-CDR & 1983 - present & Monthly \& Daily    & $0.25^{\circ} \times 0.25^{\circ}$        & $60S^{\circ} - 60N^{\circ}$      \\ \hline
-		NCEP1        & 1948 - present & Monthly \& Daily    & $2.5^{\circ} \times 2.5^{\circ}$          & Global           \\ \hline
-		NCEP2        & 1979 - present & Monthly \& Daily    & $1.875^{\circ} \times 1.875^{\circ}$      & Global           \\ \hline
+		PERSIANN-CDR & 1983 - present & Monthly , Daily    & $0.25^{\circ} \times 0.25^{\circ}$        & $60S^{\circ} - 60N^{\circ}$      \\ \hline
+		NCEP1        & 1948 - present & Monthly , Daily    & $2.5^{\circ} \times 2.5^{\circ}$          & Global           \\ \hline
+		NCEP2        & 1979 - present & Monthly , Daily    & $1.875^{\circ} \times 1.875^{\circ}$      & Global           \\ \hline
 		ERA5         & 1979 - present & Monthly             & $31\ut{km} \times 31\ut{km}$        & Global           \\ \hline
-		MERRA-2      & 1980- present  & Monthly \& Daily    & $0.5^{\circ} \times 0.625^{\circ}$        & Global           \\ \hline
+		MERRA-2      & 1980- present  & Monthly , Daily    & $0.5^{\circ} \times 0.625^{\circ}$        & Global           \\ \hline
 	\end{tabular}
 	\caption{precipitation datasets}
 	\label{tab:pre}
@@ -185,7 +63,7 @@ Evaporation is the process whereby liquid water is converted to water vapour (va
 \begin{table}[htbp]\centering 
 	\begin{tabular}{lllll}
 		&                                     &                                          &                                         &                                       \\ \hline
-		\multicolumn{1}{|l|}{Dataset}    & \multicolumn{1}{l|}{Timespan}       & \multicolumn{1}{l|}{Temporal Resolution} & \multicolumn{1}{l|}{Spatial Resolution} & \multicolumn{1}{l|}{Spatial Coverage} \\ \hline
+		\multicolumn{1}{|l|}{\textbf{Dataset}}    & \multicolumn{1}{l|}{\textbf{Timespan}}       & \multicolumn{1}{l|}{\textbf{Temporal Resolution}} & \multicolumn{1}{l|}{\textbf{Spatial Resolution}} & \multicolumn{1}{l|}{\textbf{Spatial Coverage}} \\ \hline
 		\multicolumn{1}{|l|}{GLDAS NOAH} & \multicolumn{1}{l|}{1948 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times  0.25^{\circ}$}        & \multicolumn{1}{l|}{$60^{\circ}S - 90^{\circ}N$}      \\ \hline
 		\multicolumn{1}{|l|}{GLDAS CLSM} & \multicolumn{1}{l|}{1948 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}        & \multicolumn{1}{l|}{$60^{\circ}S - 90^{\circ}N$}      \\ \hline
 		\multicolumn{1}{|l|}{GLDAS VIC}  & \multicolumn{1}{l|}{1948 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}        & \multicolumn{1}{l|}{$60^{\circ}S - 90^{\circ}N$}      \\ \hline
@@ -207,11 +85,11 @@ The SSEBop seTup is based on the Simplified Surface Energy Balance (SSEB) approa
 \subsection{Global datasets}
 Runoff is quantity of water discharged in surface streams. Runoff includes not only the waters that travel over the land surface and through channels to reach a stream but also interflow, the water that infiltrates the soil surface and travels by means of gravity toward a stream channel (always above the main groundwater level) and eventually empties into the channel. Runoff also includes groundwater that is discharged into a stream; streamflow that is composed entirely of groundwater is termed base flow, or fair-weather runoff, and it occurs where a stream channel intersects the water table.\\\\
 The in-situ run off data are from Global Runoff Data Center (GRDC). The GRDC is an international archive of data up to 200 years old, and fosters multinational and global long-term hydrological studies. Originally established three decades ago, the aim of the GRDC is to help earth scientists analyse global climate trends and assess environmental impacts and risks. Operating under the auspices of WMO the database of quality controlled "historical" mean daily and monthly discharge data grows steadily and currently comprises river discharge data of more than 9,900 stations from 159 countries.\\\\
-However, the discharge data from GRDC of Ob river are only up to 2010, which doesn't fit the purpose totally. Thus, like precipitation and evapotranspiration, models from different data centers play a role. The datasets (\autoref{tab:runoff}), which fit the in-situ discharge the best, are chosen while others are denied. The chosen data will then be processed. But it is shown later, that not all these datasets are good enough. In addition to those hydrological models, the altimetry measurement using satellite is also taken into consideration since the station for in-situ discharge(Salekhard)(\autoref{fig:Salekhard}) is known. 
+However, the discharge data from GRDC of Ob river are only up to 2010, which doesn't fit the purpose totally. Thus, like precipitation and evapotranspiration, models from different data centers are considered. \autoref{tab:runoff}. But it is shown later, that these datasets are not good enough. In addition to those hydrological models, the altimetry measurement using satellite is also taken into consideration since the station for in-situ discharge(Salekhard)(\autoref{fig:Salekhard}) is known. 
 \begin{table}[htbp]\centering
 	\begin{tabular}{llll}
 		&                                     &                                          &                                                                                \\ \hline
-		\multicolumn{1}{|l|}{Dataset}    & \multicolumn{1}{l|}{Timespan}       & \multicolumn{1}{l|}{Temporal Resolution} & \multicolumn{1}{l|}{Spatial Resolution}  \\ \hline
+		\multicolumn{1}{|l|}{\textbf{Dataset}}    & \multicolumn{1}{l|}{\textbf{Timespan}}       & \multicolumn{1}{l|}{\textbf{Temporal Resolution}} & \multicolumn{1}{l|}{\textbf{Spatial Resolution}}  \\ \hline
 		\multicolumn{1}{|l|}{GLDAS NOAH} & \multicolumn{1}{l|}{1948 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times  0.25^{\circ}$}             \\ \hline
 		\multicolumn{1}{|l|}{GLDAS CLSM} & \multicolumn{1}{l|}{1948 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}             \\ \hline
 		\multicolumn{1}{|l|}{GLDAS VIC}  & \multicolumn{1}{l|}{1948 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}              \\   \hline
