--- a/My Job/Writing/kapitel/kapitel4.tex
+++ b/My Job/Writing/kapitel/kapitel4.tex
@@ -1,26 +1,26 @@
 \chapter{Method}
-\section{Estimating hydrological component combining different datasets}\label{section:combine}
+\section{Estimating hydrological component from datasets}\label{section:combine}
 As mentioned before, the terrestrial water balance can be written as:
 \begin{equation}
-Pre - ET - R = \frac{dS}{dt}
+P - ET - R = \frac{dS}{dt}
 \end{equation}
 where
 \begin{table}[htbp]
 	\begin{tabular}{ll}
-		$Pre$   & Precipitation    \\ 
+		$P$   & Precipitation    \\ 
 		$ET$    & evapotranspiration \\ \
 		$R$     & Surface Runoff \\ 
 		$dS / dt$ & total water storage change \\ 
 	\end{tabular}
 \end{table}\\
-For each, time series from several datasets are processed\\\\
-There are several centers that post process Level-1 data of GRACE and provide solutions in terms of spherical harmonics. It should be noted that there is a one-year gap between the GRACE and GRACE-FO and several monthly gaps. This one-year gap would be ignored since we are interested in the long term trend and these monthly gaps are dealt using interpolation. For the equivalent water height we use spline interpolation while for uncertainty we use linear interpolation.\\\\
-If two known points are given by the coordinates $(x_0,y0)$ and $(x_1,y_1)$, the linear interpolant is the straight line between these points. For a value $x$ in the interval $(x_0,x_1)$, the value $y$ along the straight line is given from the equation of slopes
+For each, time series from different resources are processed using different methods\\\\
+ Jet Propulsion Laboratory (JPL), Center for Space Research (CSR), German Research Centre for Geosciences (GFZ) and Institute of Theoretical Geodesy and Satellite Geodesy (ITSG)  post process Level-1 data of GRACE and provide solutions in terms of spherical harmonics. It should be noted that there is a one-year gap between the GRACE and GRACE-FO and several monthly gaps. This one-year gap would be ignored since we are interested in the long term trend and these monthly gaps are dealt using interpolation. For the equivalent water height we use spline interpolation while for uncertainty we use linear interpolation.\\\\
+If two known points are given by the coordinates $(x_0,y0)$ and $(x_1,y_1)$, the linear interpolant is the straight line between these points. For a value $x$ in the interval $(x_0,x_1)$, the value $y$ along the straight line is given from the equation of slopes.
 \begin{equation}
 	y = y_0 + (x-x_0)\frac{y_1-y_0}{x_1-x_0}
 \end{equation}
 Spline was a term of elastic rulers that were bent to pass through a number of predifined points (knots). The approch to mathematically modelling the shape of such elastic rulers fixed by $n+1$ knots is to interpolate between all the pairs of knots and new point with polynomials. In MatLab, both of these interpolation methods can be finished using function \textit{griddedInterpolant}.\\\\
-We have 4 EWH time series from CSR, GFZ, ITSG and JPL with different uncertainties. To generate one time series of EWH for further analyse we use Gaus-Markov model.
+We have 4 TWSA time series from CSR, GFZ, ITSG and JPL with different uncertainties. To generate one time series of TWSA for further analyse we use Gaus-Markov model.
 \subsection{Adjustment using Gauss-Markov model}\label{sec:Gaussmarkov}
 Gauss-Markov model is known as the adjustment with observation equations. The model is as follows
 \begin{equation}
@@ -68,7 +68,7 @@ S_{JPL}(t)
 1
 \end{pmatrix}
 \end{align}
-By inserting \autoref{equa:guass1}, \autoref{equa:guass2} and \autoref{equa:guass3} into \autoref{equa:guass0} we are able to get one EWH for one month
+By inserting \autoref{equa:guass1}, \autoref{equa:guass2} and \autoref{equa:guass3} into \autoref{equa:guass0} we are able to get one TWSA for one month
 \begin{equation} \label{equa:finalgauss}
 \underset{1 \times 1}{\hat{\bm{x}}} = (\underset{1 \times 4}{\bm{A}}^T \underset{4 \times 4}{\bm{P}} \  \underset{4 \times 1}{\bm{A}})^{-1} \underset{1 \times 4}{\bm{A}}^T \underset{4 \times 4}{\bm{P}} \  \underset{4 \times 1}{\bm{y}}
 \end{equation}
@@ -82,29 +82,21 @@ The derivation of the TWSA would be calculated using central difference:
 = & \frac{dS(t+\Delta t) - dS(t-\Delta t)}{2 \Delta t}
 \end{align}
 where $\Delta t$ is one month. 
-\subsection{Validation of model-based estimations}\label{sec:error}
 The method used in \autoref{sec:Gaussmarkov} also works for precipitation, evapotranspiration and runoff. However, the uncertainties of these time series were unknown. Therefor, it's necessary to get the uncertainty before the adjustment. \\\\
 We assume that the precipitation and evapotranspiration are normal distributed during 2002 to 2020 (though it is not the case). Under this assumption, the precipitation and evapotranspiration in the same month every year can be regarded as a constant with random errors. We then can use the standard deviation as the uncertainty.
 \begin{gather}
 \sigma_{Pre_{Jan}} = \sqrt{\frac{\sum_{i=1}^{n} (Pre(i)_{Jan} - \bar{Pre}_{Jan})}{n-1}}
 \end{gather}
-where $\sigma_{Pre_{Jan}}$ is the standard deviation of the Precipitation in January, $Pre(i)_{Jan}$ is the precipitation in January in different years and $\bar{Pre}_{Jan}$ is the mean of all the precipitation in January. With the same method we are able to obtain the uncertai nty for precipitation and evapotranspiration in other eleven months. 
-\subsection{Finding changing point}\label{sec:changpoint}
+where $\sigma_{Pre_{Jan}}$ is the standard deviation of the Precipitation in January, $Pre(i)_{Jan}$ is the precipitation in January in different years and $\bar{Pre}_{Jan}$ is the mean of all the precipitation in January. With the same method we are able to obtain the uncertai nty for precipitation and evapotranspiration in other eleven months. \\\\
 The changing points can be found using moving average (MA). In statistics, a moving average is a calculation used to analyze data points by creating a series of averages of different subsets of the full data set. The reason for calculating the moving average is to help smooth out the data by creating a constantly updated average data. In MatLab, this could be down with \textit{movmean} function. The size of subsets is 12 in this thesis because of the number of months in one year.\\\\
-After that, a moving average time series is generated. By computing the abrupt changes in the mean of the this new series, the sudden change of the time series can be founded. This can be achieved using MatLab function \textit{ischange}. 
+After moving average time series the abrupt changes in the mean of the this new series, the sudden change of the time series can be found. This can be achieved using MatLab function \textit{ischange}, which enables user to find the abrupt changes of the a vector in mean value, variance or sloe and intercept. 
 \section{Estimating the quality of runoff datasets}\label{sec:runoffdata}
-It was mentioned in \autoref{sec:runoff} that the in-situ runoff data is existing til 2010, which allows us to select the better model to do the analyze. A simple way to do that is to calculate the RMSE (Root Mean Square Error)
-\begin{equation*}
-	RMSE = \sqrt{\frac{\sum_{t=1}^T (R(t)_{insitu} - R(t)_{model})^2}{T}}
-\end{equation*}
-Meanwhile in probability theory and statistics ,the cumulative distribution function (CDF) of a real-valued random variable $X$, or just distribution function of $X$, evaluated at $x$, is the probability that $X$ will take a value less than or equal to $x$. Quantiles are cut points dividing the range of a probability distribution into continuous intervals with equal probabilities, or dividing the observations in a sample in the same way. The quantile function, associated with a probability distribution of a random variable, specifies the value of the random variable such that th probability of teh variable being less than or equal to that value equals the given probability. It is also called the percent-point function or invers cumulative distribution function. \\\\
-First of all, we calculate the difference between the model and the in-situ data:
+It was mentioned in \autoref{sec:runoff} that the in-situ runoff data existed til 2010, which allows us to estimate the quality of the data models. First, we calculate the diFference between the model and the in-situ data.
 \begin{equation}
-d(t) = R(t)_{insitu} - R(t)_{model}
+	d(t) = R(t)_{insitu} - R(t)_{model}
 \end{equation}
-By presenting the CDF of $d$, the quality of the model can be estimate. By setting the appropriate quantile we are able to choose better time series for further analyse. 
-\section{Estimating the runoff using quantile function and water level height}\label{sec:waterlevel}
-Since the total water storage, the precipitation and evapotransipiration are available, the runoff can be determined using equation of terrestrial water balance \autoref{equa:waterbalence}. However, in \cite{10.1175/JHM-D-13-0157.1}, it was proved that this budget based approaches do not provide realistic runoff estimates because of significant biases in the input datasets. Therefore, other methods to determine runoff has to be considered. For example by using global runoff datasets or using quantile function with water level height. \\\\
+By plotting the cumulative distribution function (CDF) of $d$, the quality of the model can be estimated. By setting the appropriate quantile we are able to decide if a data model is good enough for further analyze. In this work 10\% of the mean in-situ data are set.  
+\section{Estimating the runoff using quantile function and water level}\label{sec:waterlevel}
 The river discharge at the selected gauges is typically determined from an empirical functional relation between water level estimated by satellite altimetry and measured discharges. This relation, referred to as a rating curve, is specific to each gauging station and location of altimetry. However, this technique has many limitations. First, first, this technique is limited by the availability of in situ discharge measurements simultaneous with altimetry data. Second, the location of the altimetry foot- print can also limit the usage of the technique.\\\\
 Fortunately, \cite{tourian2013quantile} provides a methods, which can represent a direct connection between the quantile functions at the corresponding probability and the relationship between runoff and water level. \\\\
 first, we get the quantile functions for altimetric water level,$Q_R(p)$ and discharge from in situ measurement, $Q_W(p)$:
@@ -140,7 +132,7 @@ In principle, the obtained relationship can be used as look-up table implying th
 		\centering
 		\includegraphics[width=0.7\textwidth]{cdfcombine} % Datei in "bilder/" bei LaTeX: eps, bei PDFLaTeX: jpg (o.ä.) 
 	\end{minipage}
-	\caption{EstimatEd water level from Envisat and available runoff for Ob river (top) and quantile function of water level and runoff (middle). A smoothened rating curve is obtained from the corresponding probabilities (bottom)}
+	\caption{Available in-situ runoff for Ob river (top left), stimatEd water level from Envisat (top right), and quantile function of water level and runoff (middle). A smoothened rating curve is obtained from the corresponding probabilities (bottom)}
 	\label{fig:wltodischarge}
 \end{figure}\\\\
-By repeating this process to SARAL and Sentinel missions we can generate an whole runoff time series from 2002 to 2020. (note there is a gap between Envisat and SARAL) 
+By repeating this process to SARAL and Sentinel missions we can generate an whole runoff time series from 2002 to 2020. (note there is a 32 months gap between Envisat and SARAL from November of 2010 to July of 2013) 
