--- a/My Job/Writing/kapitel/kapitel5.tex
+++ b/My Job/Writing/kapitel/kapitel5.tex
@@ -107,7 +107,7 @@ Like precipitation and evapotranspiration, Runoff data estimated from several mo
 \begin{table}[htbp]\label{tab:rmse} \centering
 	\begin{tabular}{|l|c|}
 		\hline
-		Datacenter  & RMSE (mm/month) \\ \hline
+		\textbf{Datacenter}  & \textbf{RMSE (mm/month)} \\ \hline
 		ERA5        & 8.18  \\ \hline
 		HTESSEL     & 10.40 \\ \hline
 		LISFLOOD    & 11.92 \\ \hline
