--- a/My Job/Writing/literatur/bib.bib
+++ b/My Job/Writing/literatur/bib.bib
@@ -33,7 +33,8 @@
 	number={2},
 	pages={132--154},
 	year={1999},
-	publisher={Taylor \& Francis}
+	publisher={Taylor \& Francis},
+	doi={10.1080/10889370802175895}
 }
 
 @article{Obriver,
@@ -43,8 +44,8 @@
 }
 
 @article{graceoverview,
-	title = {Overview - Monthly Mass Grids}
-	publisher = {NASA}
+	title = {Overview - Monthly Mass Grids},
+	publisher = {NASA},
 	url = {https://grace.jpl.nasa.gov/data/monthly-mass-grids/}
 }
 
@@ -65,25 +66,31 @@
 }
 
 @article{han1995viscoelastic,
-title={The viscoelastic relaxation of a realistically stratified earth, and a further analysis of postglacial rebound},
-author={Han, Dazhong and Wahr, John},
-journal={Geophysical Journal International},
-volume={120},
-number={2},
-pages={287--311},
-year={1995},
-publisher={Blackwell Publishing Ltd Oxford, UK}
+doi = {10.1111/j.1365-246x.1995.tb01819.x},
+url = {https://doi.org/10.1111%2Fj.1365-246x.1995.tb01819.x},
+year = {1995},
+month = {feb},
+publisher = {Oxford University Press ({OUP})},
+volume = {120},
+number = {2},
+pages = {287--311},
+author = {Dazhong Han and John Wahr},
+title = {The viscoelastic relaxation of a realistically stratified earth, and a further analysis of postglacial rebound},
+journal = {Geophysical Journal International}
 }
 
 @article{save2016high,
-	title={High-resolution CSR GRACE RL05 mascons},
-	author={Save, Himanshu and Bettadpur, Srinivas and Tapley, Byron D},
-	journal={Journal of Geophysical Research: Solid Earth},
-	volume={121},
-	number={10},
-	pages={7547--7569},
-	year={2016},
-	publisher={Wiley Online Library}
+	doi = {10.1002/2016jb013007},
+	url = {https://doi.org/10.1002%2F2016jb013007},
+	year = {2016},
+	month = {oct},
+	publisher = {American Geophysical Union ({AGU})},
+	volume = {121},
+	number = {10},
+	pages = {7547--7569},
+	author = {Himanshu Save and Srinivas Bettadpur and Byron D. Tapley},
+	title = {High-resolution {CSR} {GRACE} {RL}05 mascons},
+	journal = {Journal of Geophysical Research: Solid Earth}
 }
 
 @article{watkins2015improved,
@@ -94,7 +101,8 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 	number={4},
 	pages={2648--2671},
 	year={2015},
-	publisher={Wiley Online Library}
+	publisher={Wiley Online Library},
+	doi={10.1002/2014jb011547}
 }
 
 @article{chen2002global,
@@ -104,17 +112,22 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 	volume={3},
 	number={3},
 	pages={249--266},
-	year={2002}
+	year={2002},
+	doi={10.1175/1525-7541(2002)003<0249:glpaym>2.0.co;2}
 }
 
 @article{xie2007gauge,
-	title={A gauge-based analysis of daily precipitation over East Asia},
-	author={Xie, Pingping and Chen, Mingyue and Yang, Song and Yatagai, Akiyo and Hayasaka, Tadahiro and Fukushima, Yoshihiro and Liu, Changming},
-	journal={Journal of Hydrometeorology},
-	volume={8},
-	number={3},
-	pages={607--626},
-	year={2007}
+	doi = {10.1175/jhm583.1},
+	url = {https://doi.org/10.1175%2Fjhm583.1},
+	year = {2007},
+	month = {jun},
+	publisher = {American Meteorological Society},
+	volume = {8},
+	number = {3},
+	pages = {607--626},
+	author = {Pingping Xie and Mingyue Chen and Song Yang and Akiyo Yatagai and Tadahiro Hayasaka and Yoshihiro Fukushima and Changming Liu},
+	title = {A Gauge-Based Analysis of Daily Precipitation over East Asia},
+	journal = {Journal of Hydrometeorology}
 }
 
 @inproceedings{xie2010cpc,
@@ -122,7 +135,8 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 	author={Xie, Pingping and Chen, M and Shi, W},
 	booktitle={Preprints, 24th Conf. on Hydrology, Atlanta, GA, Amer. Meteor. Soc},
 	volume={2},
-	year={2010}
+	year={2010},
+	url={https://ams.confex.com/ams/90annual/techprogram/paper_163676.htm}
 }
 
 @article{kalnay1996ncep,
@@ -133,7 +147,8 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 	number={3},
 	pages={437--472},
 	year={1996},
-	publisher={American Meteorological Society}
+	publisher={American Meteorological Society},
+	doi={10.1175/1520-0477(1996)077<0437:TNYRP>2.0.CO;2}
 }
 
 @article{hersbach2020era5,
@@ -144,18 +159,22 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 	number={730},
 	pages={1999--2049},
 	year={2020},
-	publisher={Wiley Online Library}
+	publisher={Wiley Online Library},
+	doi={10.1002/qj.3803}
 }
 
 @article{tourian2013quantile,
-	title={A quantile function approach to discharge estimation from satellite altimetry (ENVISAT)},
-	author={Tourian, MJ and Sneeuw, N and B{\'a}rdossy, A},
-	journal={Water Resources Research},
-	volume={49},
-	number={7},
-	pages={4174--4186},
-	year={2013},
-	publisher={Wiley Online Library}
+	doi = {10.1002/wrcr.20348},
+	url = {https://doi.org/10.1002%2Fwrcr.20348},
+	year = {2013},
+	month = {jul},
+	publisher = {American Geophysical Union ({AGU})},
+	volume = {49},
+	number = {7},
+	pages = {4174--4186},
+	author = {M. J. Tourian and N. Sneeuw and A. B{\'{a}}rdossy},
+	title = {A quantile function approach to discharge estimation from satellite altimetry ({ENVISAT})},
+	journal = {Water Resources Research}
 }
 
 @article{gleick1993water,
@@ -163,7 +182,8 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 	author={Gleick, Peter H},
 	journal={Pacific Institute for Studies in Dev., Environment \& Security. Stockholm Env. Institute, Oxford Univ. Press. 473p},
 	volume={9},
-	year={1993}
+	year={1993},
+	doi={10.1890/1051-0761(1998)008[0571:wicpts]2.0.co;2}
 }
 
 @article{evans1996effects,
@@ -176,27 +196,45 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 }
 
 @article{ghassemi1995salinization,
-	title={Salinization of land and water resources},
-	author={Ghassemi, F and Jakeman, AJ and Nix, HA},
-	journal={CAB International, Wallingford, UK},
-	year={1995}
+	doi = {10.1097/00010694-199602000-00010},
+	url = {https://doi.org/10.1097%2F00010694-199602000-00010},
+	year = {1996},
+	month = {feb},
+	publisher = {Ovid Technologies (Wolters Kluwer Health)},
+	volume = {161},
+	number = {2},
+	pages = {137--138},
+	author = {H. E. Dregne},
+	title = {Salinization of Land and Water Resources.},
+	journal = {Soil Science}
 }
 
 @article{rodell2018emerging,
-	title={Emerging trends in global freshwater availability},
-	author={Rodell, Matthew and Famiglietti, JS and Wiese, DN and Reager, JT and Beaudoing, HK and Landerer, Felix W and Lo, M-H},
-	journal={Nature},
-	volume={557},
-	number={7707},
-	pages={651--659},
-	year={2018},
-	publisher={Nature Publishing Group}
+	doi = {10.1038/s41586-018-0123-1},
+	url = {https://doi.org/10.1038%2Fs41586-018-0123-1},
+	year = {2018},
+	month = {may},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {557},
+	number = {7707},
+	pages = {651--659},
+	author = {M. Rodell and J. S. Famiglietti and D. N. Wiese and J. T. Reager and H. K. Beaudoing and F. W. Landerer and M.-H. Lo},
+	title = {Emerging trends in global freshwater availability},
+	journal = {Nature}
 }
 
 @article{peel2007updated,
-	title={Updated world map of the K{\"o}ppen-Geiger climate classification},
-	author={Peel, Murray C and Finlayson, Brian L and McMahon, Thomas A},
-	year={2007}
+	doi = {10.5194/hess-11-1633-2007},
+	url = {https://doi.org/10.5194%2Fhess-11-1633-2007},
+	year = {2007},
+	month = {oct},
+	publisher = {Copernicus {GmbH}},
+	volume = {11},
+	number = {5},
+	pages = {1633--1644},
+	author = {M. C. Peel and B. L. Finlayson and T. A. McMahon},
+	title = {Updated world map of the Koeppen-Geiger climate classification},
+	journal = {Hydrology and Earth System Sciences}
 }
 
 @article{10.1175/JHM-D-13-0157.1,
@@ -216,12 +254,16 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 }
 
 @article{young2020conceptual,
-	title={A conceptual model for anticipating the impact of landscape evolution on groundwater recharge in degrading permafrost environments},
-	author={Young, Nathan Lee and Lemieux, J-M and Delottier, Hugo and Fortier, Richard and Fortier, Philippe},
-	journal={Geophysical Research Letters},
-	pages={e2020GL087695},
-	year={2020},
-	publisher={Wiley Online Library}
+	doi = {10.1029/2020gl087695},
+	url = {https://doi.org/10.1029%2F2020gl087695},
+	year = {2020},
+	month = {jun},
+	publisher = {American Geophysical Union ({AGU})},
+	volume = {47},
+	number = {11},
+	author = {N. L. Young and J.-M. Lemieux and H. Delottier and R. Fortier and P. Fortier},
+	title = {A Conceptual Model for Anticipating the Impact of Landscape Evolution on Groundwater Recharge in Degrading Permafrost Environments},
+	journal = {Geophysical Research Letters}
 }
 
 @book{oguntunde2004evapotranspiration,
@@ -232,52 +274,75 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 }
 
 @article{tapley2004grace,
-	title={GRACE measurements of mass variability in the Earth system},
-	author={Tapley, Byron D and Bettadpur, Srinivas and Ries, John C and Thompson, Paul F and Watkins, Michael M},
-	journal={Science},
-	volume={305},
-	number={5683},
-	pages={503--505},
-	year={2004},
-	publisher={American Association for the Advancement of Science}
+	doi = {10.1126/science.1099192},
+	url = {https://doi.org/10.1126%2Fscience.1099192},
+	year = {2004},
+	month = {jul},
+	publisher = {American Association for the Advancement of Science ({AAAS})},
+	volume = {305},
+	number = {5683},
+	pages = {503--505},
+	author = {B. D. Tapley},
+	title = {{GRACE} Measurements of Mass Variability in the Earth System},
+	journal = {Science}
 }
 
 @article{frey2009impacts,
-	title={Impacts of permafrost degradation on arctic river biogeochemistry},
-	author={Frey, Karen E and McClelland, James W},
-	journal={Hydrological Processes: An International Journal},
-	volume={23},
-	number={1},
-	pages={169--182},
-	year={2009},
-	publisher={Wiley Online Library}
+	doi = {10.1002/hyp.7196},
+	url = {https://doi.org/10.1002%2Fhyp.7196},
+	year = {2009},
+	month = {jan},
+	publisher = {Wiley},
+	volume = {23},
+	number = {1},
+	pages = {169--182},
+	author = {Karen E. Frey and James W. McClelland},
+	title = {Impacts of permafrost degradation on arctic river biogeochemistry},
+	journal = {Hydrological Processes}
 }
 
 @article{permafrost,
 	title={What is permafrost},
 	author={Doyle, heather},
 	year={2020},
-	publisher={NASA Climate Kids}
+	publisher={NASA Climate Kids},
+	url={https://climatekids.nasa.gov/permafrost/}
 }
 
 @article{kidd2001satellite,
-	title={Satellite rainfall climatology: A review},
-	author={Kidd, Chris},
-	journal={International Journal of Climatology: A Journal of the Royal Meteorological Society},
-	volume={21},
-	number={9},
-	pages={1041--1066},
-	year={2001},
-	publisher={Wiley Online Library}
+	doi = {10.1002/joc.635},
+	url = {https://doi.org/10.1002%2Fjoc.635},
+	year = {2001},
+	publisher = {Wiley},
+	volume = {21},
+	number = {9},
+	pages = {1041--1066},
+	author = {C. Kidd},
+	title = {Satellite rainfall climatology: a review},
+	journal = {International Journal of Climatology}
 }
 
 @article{sun2018review,
-	title={A review of global precipitation data sets: Data sources, estimation, and intercomparisons},
-	author={Sun, Qiaohong and Miao, Chiyuan and Duan, Qingyun and Ashouri, Hamed and Sorooshian, Soroosh and Hsu, Kuo-Lin},
-	journal={Reviews of Geophysics},
-	volume={56},
-	number={1},
-	pages={79--107},
-	year={2018},
-	publisher={Wiley Online Library}
+	doi = {10.1002/2017rg000574},
+	url = {https://doi.org/10.1002%2F2017rg000574},
+	year = {2018},
+	month = {jan},
+	publisher = {American Geophysical Union ({AGU})},
+	volume = {56},
+	number = {1},
+	pages = {79--107},
+	author = {Qiaohong Sun and Chiyuan Miao and Qingyun Duan and Hamed Ashouri and Soroosh Sorooshian and Kuo-Lin Hsu},
+	title = {A Review of Global Precipitation Data Sets: Data Sources, Estimation, and Intercomparisons},
+	journal = {Reviews of Geophysics}
+}
+
+@article{lorenz2014large,
+	title={Large-scale runoff from landmasses: a global assessment of the closure of the hydrological and atmospheric water balances},
+	author={Lorenz, Christof and Kunstmann, Harald and Devaraju, Balaji and Tourian, Mohammad J and Sneeuw, Nico and Riegger, Johannes},
+	journal={Journal of Hydrometeorology},
+	volume={15},
+	number={6},
+	pages={2111--2139},
+	year={2014},
+	doi={10.1175/JHM-D-13-0157.1}
 }
