last update (hopefully)

--- a/My Job/Writing/kapitel/kapitel5.tex
+++ b/My Job/Writing/kapitel/kapitel5.tex
@@ -170,7 +170,7 @@ Then, if we take the CDF of the difference from those models and in-situ data an
 	\label{fig:rnum2}
 \end{figure}\\
 \clearpage
-\section{Discussion about the quality}
+\section{Discussion of the quality}
 In order to eliminate the bias between different component, we take the first period as the baseline. Relative dS/dt, precipitaion, evapotranspiration and runoff numbers of other 2 period are obtained related to that. \\\\
 In any case, the equation of terrestrial water balance \autoref{equa:waterbalence} has to be a true statement, which means the result of $P-dS/dt-ET-R$ with uncertainties should be 0. Substituing the results of both periods into this formula can get $-0.57 \pm 1.63$ mm/month for the second period, and $0.29 \pm 1.37$ mm/month for the third period, which can be acceptable. 
 \begin{table}[htbp]\centering
