--- a/My Job/Writing/kapitel/kapitel3.tex
+++ b/My Job/Writing/kapitel/kapitel3.tex
@@ -85,7 +85,7 @@ The SSEBop seTup is based on the Simplified Surface Energy Balance (SSEB) approa
 \subsection{Global datasets}
 Runoff is quantity of water discharged in surface streams. Runoff includes not only the waters that travel over the land surface and through channels to reach a stream but also interflow, the water that infiltrates the soil surface and travels by means of gravity toward a stream channel (always above the main groundwater level) and eventually empties into the channel. Runoff also includes groundwater that is discharged into a stream; streamflow that is composed entirely of groundwater is termed base flow, or fair-weather runoff, and it occurs where a stream channel intersects the water table.\\\\
 The in-situ run off data are from Global Runoff Data Center (GRDC). The GRDC is an international archive of data up to 200 years old, and fosters multinational and global long-term hydrological studies. Originally established three decades ago, the aim of the GRDC is to help earth scientists analyse global climate trends and assess environmental impacts and risks. Operating under the auspices of WMO the database of quality controlled "historical" mean daily and monthly discharge data grows steadily and currently comprises river discharge data of more than 9,900 stations from 159 countries.\\\\
-However, the discharge data from GRDC of Ob river are only up to 2010, which doesn't fit the purpose totally. Thus, like precipitation and evapotranspiration, models from different data centers are considered. \autoref{tab:runoff}. But it is shown later, that these datasets are not good enough. In addition to those hydrological models, the altimetry measurement using satellite is also taken into consideration since the station for in-situ discharge(Salekhard)(\autoref{fig:Salekhard}) is known. 
+However, the discharge data from GRDC of Ob river are only up to 2010, which doesn't fit the purpose totally. Thus, like precipitation and evapotranspiration, models from different data centers are considered. \autoref{tab:runoff}. But it is shown later, that these datasets are not good enough. 
 \begin{table}[htbp]\centering
 	\begin{tabular}{llll}
 		&                                     &                                          &                                                                                \\ \hline
@@ -105,6 +105,25 @@ However, the discharge data from GRDC of Ob river are only up to 2010, which doe
 	\caption{runoff datasets}
 	\label{tab:runoff}
 \end{table}
+\subsection{Determination from other component}
+Runoff can be calculated using terrestrial water balance \autoref{equa:waterbalence} since the other 3 components are obtained. However, this method is proved by \cite{lorenz2014large} not ideal. It combined various datasets and used different metrics to judge the quality of these combinations. It is shown in \autoref{fig:judgerunoff} that even though in some areas like Amazon this method is feasible, for most area, especially for Ob river basin, it is not very ideal. 
+\begin{figure}[htbp]\centering
+	\begin{minipage}[t]{0.8\textwidth}
+		\centering
+		\includegraphics[width=1\textwidth]{Ob1} % Datei in "bilder/" bei LaTeX: eps, bei PDFLaTeX: jpg (o.ä.) 
+	\end{minipage}
+	\begin{minipage}[t]{0.85\textwidth}
+		\centering
+		\includegraphics[width=1\textwidth]{Ob2} % Datei in "bilder/" bei LaTeX: eps, bei PDFLaTeX: jpg (o.ä.) 
+	\end{minipage}
+	\begin{minipage}[t]{0.85\textwidth}
+		\centering
+		\includegraphics[width=1\textwidth]{Ob3} % Datei in "bilder/" bei LaTeX: eps, bei PDFLaTeX: jpg (o.ä.) 
+	\end{minipage}
+	\caption{various of data combinations are used to estimate the runoff, there are 3 metrics (PBIAS, correlation and NSE wrt. GRDC) to judge the quality of these combinations for Ob basin}
+	\label{fig:judgerunoff}
+\end{figure}\\\\
+In addition, the altimetry measurement using satellite is also taken into consideration since the station for in-situ discharge(Salekhard)(\autoref{fig:Salekhard}) is known. 
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=0.9\textwidth]{salekhard} % Datei in "bilder/" bei LaTeX: eps, bei PDFLaTeX: jpg (o.ä.) 
