--- a/My Job/Writing/kapitel/kapitel6.tex
+++ b/My Job/Writing/kapitel/kapitel6.tex
@@ -1,7 +1,7 @@
 \chapter{Conclusion and outlook}
 \section{Conclusion}
 In this work the behavior of total water storage along with other water cycle component in Ob river basin since 2003 are discussed. The equivalent water height is through GRACE and GRACE-FO mission determined, precipitation and evapotranspiration are obtained from various data models and runoff is measured using satellite altimetry. For each of these component, one final time series is generated using mathematical and statistic methods. The whole time series divide into 3 periods and the change of each component in these periods are analyzed. \\\\
-The GRACE data showed that before 2013, the total water storage in Ob river basin has slightly decreased by $0.68 \pm 0.25 \ut{mm/month}$, from 2013 to 2015 there is a positive trend of the total water storage ($3.31 \pm 0.86 \ut{mm/month}$) and this is due to the growth of the precipitation amount ($39.12 \pm 0.35\ \text{to} \ 44.32\pm 0.64 \ut{mm/month}$). After 2015, the precipitation in this area has a decline comparing to the value between 2013 and 2015 ($41.28 \pm 0.55 \ut{mm/month}$). Though evapotranspiration are also weaker in this period the reduction was not as strong as precipitation and meanwhile runoff may have increased. As a result, total water storage has reduced by $0.80 \pm 0.57 \ut{mm/month}$ since 2016. \\\\
-The water increase from 2013 to 2015 happened in north west of this catchment. The water lost after 2016, however, took place not only in north west, but also in south east. 
+The GRACE data showed that before 2013, the total water storage in Ob river basin has slightly decreased by $0.68 \pm 0.25 \ut{mm/month}$, in this first period, 80 \% of the precipitation goes to evapotranspiration ($32.59$ of $39.12$). In the second period, the gained evapotranspiration is only 30 \% of increased precipitation ($1.53$ of $5.20$), and it is hard to confirm if the runoff has changed. This means, most of the increased precipitation remains as total water storage in this period. In the third period, however, the precipitation has reduced and the amount of decreased evapotranspiration was half of the it ($1.19$ of $2.15$), which indicates an stronger evapotranspiration than in the second periods and the runoff has grown as well. As an result, the catchment lost water since 2016.
 \section{Outlook}
-There is still some questions that can be answered. We've already found the difference of water storage change in different subareas, by further spatial analyzing the water behavior of different subareas can be analyzed.   Furthermore, water storage exists in different forms like groundwater recharge and permafrost, the hydrological implications of continued permafrost degradation is complicated in high-latitude regions  \cite{young2020conceptual}. Further research is needed in order to understand the water behavior. 
+There is still some questions that can be answered. Ob river basin is a very big area and we've already found the difference of water storage change in different subareas, by further spatial analyzing the water behavior of different subareas can be analyzed. Furthermore, the runoff and evapotranspiration has not increased so much as the precipitation did in the second period, this may relate to low temperature because the water turned to permafrost \cite{young2020conceptual}. Further research is needed in order to understand this water behavior. 
+ 
